--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ fonttools==4.59.0
 kiwisolver==1.4.8
 matplotlib==3.10.5
 nnfs==0.5.1
-numpy==2.3.1
+numpy==2.2.6
+opencv-python==4.12.0.88
 packaging==25.0
 pillow==11.3.0
 pyparsing==3.2.3
